[package]
name = "compress_io"
version = "0.2.1"
edition = "2021"
authors = ["Simon Heath <simon.heath@gmail.com>"]
include = ["/src", "Cargo.toml", "LICENSE", "README.md"]
description = "Convenience library for reading and writing compressed files/streams"
repository = "https://github.com/heathsc/compress_io"
keywords = ["compression"]
categories = ["compression"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["tokio", "tokio-pipe"]

[dependencies]
libc = "0.2"
num_cpus = "1.13"
lazy_static = "1.4"
tempfile = "3.2"
os_pipe = "1"
tokio = { version = "1", features = ["io-std", "io-util", "fs", "process", "rt", "rt-multi-thread"], optional = true }
tokio-pipe = { version = "0.2", optional = true }
